Fix: Refactor css to work on Firefox and Safari

--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,16 @@ body {
 html {
   scroll-behavior: smooth;
 }
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+@media (min-width: 1024px) {
+  img {
+    height: 100%;
+    width: auto;
+  }
+}
